--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,37 @@
+# ==================================================
+# Application Info
+# ==================================================
 spring.application.name=usermanagement
+server.port=8080
+
+# ==================================================
+# PostgreSQL Database Configuration
+# ==================================================
+spring.datasource.url=jdbc:postgresql://localhost:5432/usermanagement_db
+spring.datasource.username=postgres
+spring.datasource.password=server@123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# ==================================================
+# File Storage
+# ==================================================
+# All uploaded files will be stored here
+file.upload-dir=uploads
+
+# ==================================================
+# Logging
+# ==================================================
+logging.level.org.springframework=INFO
+logging.level.com.mcit.usermanagement=DEBUG
+
+# ==================================================
+# JWT Security (if you’re using JWT Auth)
+# ==================================================
+app.jwt.secret=replace-this-with-a-very-long-random-secret-key
+app.jwt.expiration-ms=3600000  # 1 hour
